--- a/package.json
+++ b/package.json
@@ -4,8 +4,32 @@
   "description": "Uji coin is the best",
   "dependencies": {
     "express": "^4.10.2",
+    "material-ui": "^0.16.4",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "socket.io": "^1.5.1",
     "underscore": "^1.8.3",
     "webpack-dev-server": "^1.16.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "cd server && node ./index.js",
+    "watch": "webpack --watch",
+    "pack": "webpack"
+  },
+  "devDependencies": {
+    "babel": "6.5.2",
+    "babel-core": "6.7.7",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-2": "6.5.0",
+    "babel-runtime": "6.6.1",
+    "eslint": "2.13.1",
+    "eslint-plugin-react": "4.2.3",
+    "source-map": "0.5.6",
+    "style-loader": "0.13.0",
+    "webpack": "1.12.14"
   }
 }
